# python-workshop

./: .flake8  .gitignore  .gitmodules  Dockerfile  Makefile  pyproject.toml
WorkShop/boost_performance/: a_numba.py
WorkShop/learning/: dynamic_programming.py  foobar.py
WorkShop/ssl_checker/: README.md  get_ciphers.sh  main.py  shortcuts.sh  ssl-enum-ciphers.nse
boost_performance/: a_numba.py
ssl_checker/: main.py
